<?xml version="1.0"?>
<package format="2">
  <name>airsim_launch</name>
  <version>1.0.0</version>
  <description>The airsim_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="erin@robotics88.com">erin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>commercial</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>octomap_rviz_plugins</depend>
  <depend>rosbridge_server</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <build_depend>tf2_sensor_msgs</build_depend>

</package>
